SF-IMP-0068 preserve deterministic cave obligation order